Fix the overlapping of the dropdowns with the navbar

--- a/css/inner/navbar.less
+++ b/css/inner/navbar.less
@@ -25,13 +25,12 @@
     ul.nav {
       li {
         font-family: 'Open Sans', sans-serif;
-        border-right: 1px solid #214062;
         .box-shadow(inset 1px 0 0 rgba(80,113,154, 1));
         a {
-          line-height: 24px; // keeps this nav from overflowing the box
+          line-height: 25px; // keeps this nav from overflowing the box
           font-size: 15px;
-          padding: 12px 10px 11px;
-          color: #fff;
+          padding: 14px 10px 11px;
+          color: white;
           .text-shadow(1px,-2px,0px, #1B3E69);
         }
         &:hover {
